--- a/Pratica - W2018.ipynb
+++ b/Pratica - W2018.ipynb
@@ -353,8 +353,8 @@
     "\n",
     "# use as rotinas do astropy para ler a imagem e seu cabeçalho\n",
     "spec, header = fits.getdata(spec_file, header=True)\n",
-    "print header['NAXIS1'],header['CDELT1'],header['CRVAL1']\n",
-    "wave = np.arange(header['NAXIS1'])*header['CDELT1']+header['CRVAL1']\n",
+    "\n",
+    "#esse exemplo usa o vetor de comprimentos de onda feito no ex. 4 que aqui chamamos de wave!\n",
     "\n",
     "# modoo de se obter os indices de um vetor que satisfazem uma condição\n",
     "loc = np.where(np.abs(wave-4861.) < 50.)\n",
