some minor changes

--- a/Pratica - W2018.ipynb
+++ b/Pratica - W2018.ipynb
@@ -148,7 +148,7 @@
     "\n",
     "A parametrização da relação mostrada na figura acima que nos permite calcular a densidade a partir das linhas do enxofre é dada por:\n",
     "\n",
-    "$$ n_e = \\frac{R[SII]-1.49}{5.62 − 12.80 × R[SII]} \\times 10^4$$\n",
+    "$$ n_e = \\frac{R[SII]-1.49}{5.62 - 12.80 \\times R[SII]} \\times 10^4$$\n",
     "\n",
     "onde $R[SII] = I(6716)/I(6731)$"
    ]
