Added reference for results

--- a/Pratica - W2018.ipynb
+++ b/Pratica - W2018.ipynb
@@ -517,7 +517,13 @@
     "Use o exemplo acima para construir um programa para ajustar gaussianas e o contínuo aos dados espectrais na faixa das linhas de interesse. Lembre-se que no caso das linhas em que estamos interessados precisamos ajustar duas gaussianas ao mesmo tempo!\n",
     "\n",
     "Dica: use o exemplo acima e a pagina que descreve o modulo de ajustes do Astropy para ajudar na construção do programa:\n",
-    "http://docs.astropy.org/en/stable/modeling/"
+    "http://docs.astropy.org/en/stable/modeling/\n",
+    "\n",
+    "-  Use as intensidades das linhas obtidas por seu ajuste para calcular a densidade da nebulosa;\n",
+    "\n",
+    "-  compare seus resltados com os mostrados na referencia: https://owncloud.unifei.edu.br/index.php/s/TYMW8IwdlmwYaZ5\n",
+    "\n",
+    "-  extra: ajuste outras linhas e compare com os valores da referencia acima. Os resultados são coerentes? Por que?"
    ]
   },
   {
